AI-JADEDEVS4/src/objects/OpportunityTeamMember.object
<CustomObject>
    <fields>
        <fullName>IsClosed__c</fullName>
        <formula>Opportunity.IsClosed</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsClosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Old_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>45</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Team_Member_Role__c</fullName>
        <label>Team Member Role</label>
        <picklist>
            <picklistValues>
                <fullName>SDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account CSM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>